--- a/src/app/components/shared/header/header.component.html
+++ b/src/app/components/shared/header/header.component.html
@@ -1,1 +1,27 @@
-<p>header works!</p>
+<p >
+    <mat-toolbar class="header">
+    <span>E-Commerce</span>
+    <span class="example-spacer"></span>
+    <!-- <button mat-icon-button class="example-icon" aria-label="Example icon-button with home icon"> -->
+        <mat-icon aria-hidden="false" aria-label="Example home icon" fontIcon="home">home</mat-icon>
+    <!-- </button> -->
+    <span class="spacer"></span>
+    <!-- <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon"> -->
+      <mat-icon>favorite</mat-icon>
+    <!-- </button> -->
+    <span class="spacer"></span>
+    <!-- <button mat-icon-button class="example-icon" aria-label="Example icon-button with shopping_cart icon"> -->
+        <mat-icon aria-hidden="false" aria-label="Example shopping_cart icon" fontIcon="shopping_cart">shopping_cart</mat-icon>
+    <!-- </button> -->
+   
+    <!-- <span class="spacer"></span>
+    <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
+     <mat-icon>share</mat-icon>
+   </button> -->
+   
+   <span class="spacer"></span>
+   <a href="">Orders</a>
+   <span class="spacer"></span>
+   <mat-icon aria-hidden="false" aria-label="Example signin icon" fontIcon="login">login</mat-icon>
+  </mat-toolbar>
+  </p>
